# mcino-Introduction-to-Git-and-GitHub

./: CHANGELOG.md  README.md  SECURITY.md  integration_test_results.json  merge_branches.txt  pyproject.toml  requirements-dev.txt
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build-test.yaml  deploy.yaml  security-scan.yaml  supply-chain.yaml
docs/: ADR-001-enterprise-infrastructure.md  DEPLOYMENT_RUNBOOK.md  PR_REVIEW_CHECKLIST.md
scripts/: configure-branch-protection.sh  generate-sbom.sh  test-coverage.sh
tests/: integration_test.py  test_compound_interest.py  test_shell.bats
